# openmodelz

./: .all-contributorsrc  .gitignore  .goreleaser.yaml  MANIFEST.in  README.md  go.mod  go.sum  pyproject.toml  setup.py  typos.toml
.github/workflows/: CI.yaml  publish.yaml
agent/: .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum  sqlc.yaml
agent/client/: build.go  client.go  const.go  errors.go  hijack.go  image_cache_create.go  inference_create.go  inference_get.go  inference_list.go  inference_remove.go  inference_scale.go  inference_update.go  info.go  instance_exec.go  instance_list.go  log.go  modelz_cloud.go  namespace_create.go  namespace_delete.go  options.go  request.go  secret_create.go  server_label_create.go  server_list.go  server_node_delete.go  transport.go  utils.go
agent/errdefs/: defs.go  doc.go  helpers.go  http_helpers.go  is.go
agent/sql/: schema.sql
autoscaler/: Dockerfile  Makefile  go.mod  go.sum
charts/openmodelz/: Chart.yaml  README.md  values.yaml
ingress-operator/: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  go.mod  go.sum  main.go
ingress-operator/.tools/: code-generator.mod  code-generator.sum
ingress-operator/artifacts/: README.md  operator-amd64.yaml  operator-rbac.yaml
ingress-operator/examples/: .gitignore  figlet-traefik.yaml  nodeinfo-bypass-ingress.yaml  nodeinfo-ingress-traefik.yaml  nodeinfo-ingress.yaml  tls-nodeinfo-ingress.yaml
ingress-operator/hack/: boilerplate.go.txt  custom-boilerplate.go.txt  update-codegen.sh
mdz/: .gitignore  Makefile  README.md  go.mod  go.sum
mdz/docs/: mdz.md  omz.md  (+16 more)
modelzetes/: Dockerfile  LICENSE  Makefile  buf.yaml  go.mod  go.sum
omz/: Makefile  go.mod  go.sum
(+360 files in other folders)
